updated swagger and routes
